--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 									<a href="index.html" class="logo"><strong>Paul Bailey</strong></a>
 									<ul class="icons">
 										<li><a href="https://github.com/PNBailey" class="icon brands fa-github"><span class="label">Github</span></a></li>
-										<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+										<!-- <li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li> -->
 									</ul>
 								</header>
 
