--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 											<h1>Hi, I’m Paul Bailey</h1>
 											<p>A Software Developer from Brighton</p>
 										</header>
-										<p>I'm a passionate self taught developer with a mindset that I am capable of achieving anything if I put my mind to it. Having come from a self taught background, I have the advantage of being able to solve problems independantly and pride myself on my grit and determination. I have really enjoyed learning how to program and ensure that I do what I can to adhere to the principles of object oriented programming. </p>
+										<p>I'm a passionate self taught developer with a mindset that I am capable of achieving anything if I put my mind to it. Having come from a self taught background, I have the advantage of being able to solve problems independantly and pride myself on my grit and determination. I have really enjoyed learning how to program and ensure that I do what I can to adhere to the principles of Object Oriented Programming. </p>
 										<ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
 										</ul>
