updating text ad adding margin

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 										<article>
 											<a href="#" class="image"><img src="./images/ezgif.com-video-to-gif 1.gif" height="245.39px;"></img></a>
 											<h3>Photo Gallery</h3>
-											<p>Using Angular, HTML, CSS and a Google Firebase backend, I created this responsive photo gallery app where users can view, like and comment on my photos. During this project, I learnt how to use Angular and discovered what a powerful, responsive framework this can be. I also learnt how to use modern CSS techniques such as CSS Grid and Flexbox.</p>
+											<p>Using Angular, HTML, CSS and a Google Firebase backend, I created this responsive photo gallery app where users can view, like and comment on my photos. During this project, I learnt how to use Angular and discovered what a powerful framework this can be. I also learnt how to use modern CSS techniques such as CSS Grid and Flexbox.</p>
 											<ul class="actions">
 												<li><a href="#" class="button">More</a></li>
 											</ul>
@@ -91,7 +91,7 @@
 										<article>
 											<a href="#" class="image"><img src="images/ezgif.com-video-to-gif 2.gif" height="245.39px;"></a>
 											<h3>Maze Game</h3>
-											<p>This fun maze game lets you pit yourself against your friends, to see who can complete the maze in the quickest time. Built using Vanilla Javascript, Webpack, HTML and CSS, the single page web application utilises MVC principles and object oriented methodologies to create a entertaining user experience.</p>
+											<p>My first web app! This fun maze game lets you pit yourself against your friends, to see who can complete the maze in the quickest time. Built using Vanilla Javascript, Webpack, HTML and CSS.</p>
 											<ul class="actions">
 												<li><a href="#" class="button">More</a></li>
 											</ul>
