adding new project

--- a/index.html
+++ b/index.html
@@ -89,6 +89,14 @@
 											</ul>
 										</article>
 										<article>
+											<a href="https://github.com/PNBailey/Photo-Gallery" class="image"><img src="./images/ezgif.com-video-to-gif.gif" height="245.39px;"></img></a>
+											<h3>Beach Clean Events</h3>
+											<p>Inspired by our love for keeping our beaches clean, I created this application which allows users to create and search for beach cleaning events. Incorporating the Cloudinary 3rd party API allows users to upload images. Users can add other users as friends and can also like users. Built using Angular, CSS, HTML, .NET Web API and a SQL back end.</p>
+											<ul class="actions">
+												<li><a href="https://github.com/PNBailey/Photo-Gallery" class="button">More</a></li>
+											</ul>
+										</article>
+										<article>
 											<a href="https://github.com/PNBailey/Maze-Game" class="image"><img src="images/ezgif.com-video-to-gif 2.gif" height="245.39px;"></a>
 											<h3>Maze Game</h3>
 											<p>My first web app! This fun maze game lets you pit yourself against your friends, to see who can complete the maze in the quickest time. Built using Vanilla Javascript, Webpack, HTML and CSS.</p>
