changing proj positions etc

--- a/index.html
+++ b/index.html
@@ -81,17 +81,17 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="https://github.com/PNBailey/Photo-Gallery" class="image"><img src="./images/ezgif.com-video-to-gif 1.gif" height="245.39px;"></img></a>
-											<h3>Photo Gallery</h3>
-											<p>Using Angular, HTML, CSS and a Google Firebase backend, I created this responsive photo gallery app where users can view, like and comment on my photos. During this project, I learnt how to use Angular and discovered what a powerful framework this can be. I also learnt how to use modern CSS techniques such as CSS Grid and Flexbox.</p>
+											<a href="https://github.com/PNBailey/BeachClean" class="image"><img src="./images/Beach-Clean-Gif.gif" height="245.39px;"></img></a>
+											<h3>Beach Clean Events</h3>
+											<p>Inspired by our love for keeping our beaches clean, I created this application which allows users to create and search for beach cleaning events. Incorporating the Cloudinary 3rd party API allows users to upload images. Users can add other users as friends and can also like users. Built using Angular, CSS, HTML, .NET Web API and a SQL back end.</p>
 											<ul class="actions">
-												<li><a href="https://github.com/PNBailey/Photo-Gallery" class="button">More</a></li>
+												<li><a href="https://github.com/PNBailey/BeachClean" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="https://github.com/PNBailey/Photo-Gallery" class="image"><img src="./images/ezgif.com-video-to-gif.gif" height="245.39px;"></img></a>
-											<h3>Beach Clean Events</h3>
-											<p>Inspired by our love for keeping our beaches clean, I created this application which allows users to create and search for beach cleaning events. Incorporating the Cloudinary 3rd party API allows users to upload images. Users can add other users as friends and can also like users. Built using Angular, CSS, HTML, .NET Web API and a SQL back end.</p>
+											<a href="https://github.com/PNBailey/Photo-Gallery" class="image"><img src="./images/ezgif.com-video-to-gif 1.gif" height="245.39px;"></img></a>
+											<h3>Photo Gallery</h3>
+											<p>Using Angular, HTML, CSS and a Google Firebase backend, I created this responsive photo gallery app where users can view, like and comment on my photos. During this project, I learnt how to use Angular and discovered what a powerful framework this can be. I also learnt how to use modern CSS techniques such as CSS Grid and Flexbox.</p>
 											<ul class="actions">
 												<li><a href="https://github.com/PNBailey/Photo-Gallery" class="button">More</a></li>
 											</ul>
