adding .net core icon

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
 											<span class="icon angular-icon"><h3>Angular</h3><img src="./images/Angular logo.png" alt="Angular Logo"></span> 
 										</article>
 										<article>
+											<span class="icon .net-icon"><h3>.NET</h3><img src="./images/NET_Core_Logo.png" alt=".NET Logo"></span> 
+										</article>
+										<article>
 											<span class="icon Javascript-icon"><h3>Javascript</h3><img src="./images/Javascript Logo.png" alt="Javascript Logo"></span>
 										</article>
 										<article>
