--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 											<span class="icon angular-icon"><h3>Angular</h3><img src="./images/Angular logo.png" alt="Angular Logo"></span> 
 										</article>
 										<article>
-											<span class="icon .net-icon"><h3>.NET</h3><img src="./images/NET_Core_Logo.png" alt=".NET Logo"></span> 
+											<span class="icon .net-icon"><h3>.NET</h3><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ee/.NET_Core_Logo.svg/2048px-.NET_Core_Logo.svg.png" alt=".NET Logo"></span> 
 										</article>
 										<article>
 											<span class="icon Javascript-icon"><h3>Javascript</h3><img src="./images/Javascript Logo.png" alt="Javascript Logo"></span>
