changing icon size

--- a/index.html
+++ b/index.html
@@ -57,10 +57,7 @@
 											<span class="icon angular-icon"><h3>Angular</h3><img src="./images/Angular logo.png" alt="Angular Logo"></span> 
 										</article>
 										<article>
-											<span class="icon .net-icon"><h3>.NET</h3><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ee/.NET_Core_Logo.svg/2048px-.NET_Core_Logo.svg.png" alt=".NET Logo"></span> 
-										</article>
-										<article>
-											<span class="icon Javascript-icon"><h3>Javascript</h3><img src="./images/Javascript Logo.png" alt="Javascript Logo"></span>
+											<span class="icon net-core-icon"><h3>.NET</h3><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ee/.NET_Core_Logo.svg/2048px-.NET_Core_Logo.svg.png" alt=".NET Logo"></span> 
 										</article>
 										<article>
 											<span class="icon PowerBI-icon"><h3>Power BI</h3><img src="./images/Power BI Logo.png" alt="Power BI Logo"></span>
@@ -73,6 +70,9 @@
 										</article>
 										<article>
 											<span class="icon CSS-icon"><h3>CSS</h3><img src="./images/CSS Logo.png" alt="CSS icon"></span>
+										</article>
+										<article>
+											<span class="icon Javascript-icon"><h3>Javascript</h3><img src="./images/Javascript Logo.png" alt="Javascript Logo"></span>
 										</article>
 									</div>
 								</section>
