--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 											<span class="icon angular-icon"><h3>Angular</h3><img src="./images/Angular logo.png" alt="Angular Logo"></span> 
 										</article>
 										<article>
-											<span class="icon net-core-icon"><h3>.NET</h3><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ee/.NET_Core_Logo.svg/2048px-.NET_Core_Logo.svg.png" alt=".NET Logo"></span> 
+											<span class="icon"><h3>.NET</h3><img class="net-core-icon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ee/.NET_Core_Logo.svg/2048px-.NET_Core_Logo.svg.png" alt=".NET Logo"></span> 
 										</article>
 										<article>
 											<span class="icon PowerBI-icon"><h3>Power BI</h3><img src="./images/Power BI Logo.png" alt="Power BI Logo"></span>
