Adding blogs section

--- a/index.html
+++ b/index.html
@@ -80,6 +80,15 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
+										<h2>Blogs</h2>
+									</header>
+									<div class="posts">
+									</div>
+								</section>
+
+							<!-- Section -->
+								<section>
+									<header class="major">
 										<h2>Projects</h2>
 									</header>
 									<div class="posts">
