--- a/index.html
+++ b/index.html
@@ -83,17 +83,19 @@
 										<h2>Blogs</h2>
 									</header>
 									<div class="posts">
-										<div 
-											id="retainable-rss-embed" 
-											data-rss="https://medium.com/feed/retainable,
-											https://medium.com/feed/vue-mastery"
-											data-maxcols="3" 
-											data-layout="grid" 
-											data-poststyle="inline" 
-											data-readmore="Read the rest" 
-											data-buttonclass="btn btn-primary" 
-											data-offset="-100">
-										</div>
+										<article>
+											<div 
+												id="retainable-rss-embed" 
+												data-rss="https://medium.com/feed/retainable,
+												https://medium.com/feed/vue-mastery"
+												data-maxcols="3" 
+												data-layout="grid" 
+												data-poststyle="inline" 
+												data-readmore="Read the rest" 
+												data-buttonclass="btn btn-primary" 
+												data-offset="-100">
+											</div>
+										</article>
 									</div>
 								</section>
 
