adding medium blog article

--- a/index.html
+++ b/index.html
@@ -84,17 +84,14 @@
 									</header>
 									<div class="posts">
 										<article>
-											<div 
-												id="retainable-rss-embed" 
-												data-rss="https://medium.com/feed/retainable,
-												https://medium.com/feed/vue-mastery"
-												data-maxcols="3" 
-												data-layout="grid" 
-												data-poststyle="inline" 
-												data-readmore="Read the rest" 
-												data-buttonclass="btn btn-primary" 
-												data-offset="-100">
-											</div>
+											<article>
+												<a href="https://medium.com/@52pbailey/asynchronous-reactive-angular-components-b3ac494bf9cf" class="image"><img src="./images/Asynchronous, reactive components blog.PNG" height="245.39px;"></img></a>
+												<h3>Asynchronous, Reactive Angular Components</h3>
+												<p>An article I wrote about Reactive programming in Angular using RXJS. In this article, I explain how to move away from using Imperative code by utilising the Reactive/Declarative coding paradigm.</p>
+												<ul class="actions">
+													<li><a href="https://medium.com/@52pbailey/asynchronous-reactive-angular-components-b3ac494bf9cf" class="button">More</a></li>
+												</ul>
+											</article>
 										</article>
 									</div>
 								</section>
@@ -140,7 +137,7 @@
 						<div class="inner">
 
 							<!-- Section -->
-								<section>
+								<section class="get-in-touch-section">
 									<header class="major">
 										<h2>Get in touch</h2>
 									</header>
