updating image name

--- a/index.html
+++ b/index.html
@@ -38,9 +38,6 @@
 											<p>A Software Developer from Brighton</p>
 										</header>
 										<p>I'm a passionate self taught developer with a mindset that I am capable of achieving anything if I put my mind to it. Having come from a self taught background, I have the advantage of being able to solve problems independantly and pride myself on my grit and determination. I have really enjoyed learning how to program and ensure that I do what I can to adhere to the principles of Object Oriented Programming. </p>
-										<ul class="actions">
-											<li><a href="#" class="button big">Learn More</a></li>
-										</ul>
 									</div>
 									<span class="image object">
 										<img src="images/Profile Picture.jpg" alt="Me" />
@@ -84,7 +81,7 @@
 									</header>
 									<div class="blogs">
 										<article>
-											<a href="https://medium.com/@52pbailey/asynchronous-reactive-angular-components-b3ac494bf9cf" class="image"><img src="./images/Asynchronous, reactive components blog.PNG" height="245.39px;"></img></a>
+											<a href="https://medium.com/@52pbailey/asynchronous-reactive-angular-components-b3ac494bf9cf" class="image"><img src="./images/Asynchronous, reactive component blog.PNG" height="245.39px;"></img></a>
 											<p>An article I wrote about Reactive programming in Angular using RXJS. In this article, I explain how to move away from using Imperative code by utilising the Reactive/Declarative coding paradigm.</p>
 											<ul class="actions">
 												<li><a href="https://medium.com/@52pbailey/asynchronous-reactive-angular-components-b3ac494bf9cf" class="button">More</a></li>
