--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 									<header class="major">
 										<h2>Blogs</h2>
 									</header>
-									<div class="blogs">
+									<div class="posts">
 										<article>
 											<a href="https://medium.com/@52pbailey/asynchronous-reactive-angular-components-b3ac494bf9cf" class="image"><img src="./images/Asynchronous, reactive component blog.PNG" height="245.39px;"></img></a>
 											<p>An article I wrote about Reactive programming in Angular using RXJS. In this article, I explain how to move away from using Imperative code by utilising the Reactive/Declarative coding paradigm.</p>
