updating clogs styles

--- a/index.html
+++ b/index.html
@@ -1,10 +1,5 @@
 
 <!DOCTYPE HTML>
-<!--
-	Editorial by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Paul Bailey</title>
@@ -26,7 +21,7 @@
 									<a href="index.html" class="logo"><strong>Paul Bailey</strong></a>
 									<ul class="icons">
 										<li><a href="https://github.com/PNBailey" class="icon brands fa-github"><span class="label">Github</span></a></li>
-										<!-- <li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li> -->
+										<li><a href="https://www.linkedin.com/in/paul-bailey-40b5266a/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									</ul>
 								</header>
 
