--- a/index.html
+++ b/index.html
@@ -75,12 +75,17 @@
 										<h2>Blogs</h2>
 									</header>
 									<div class="blogs">
-										<article class="blog">
+										<article>
 											<a href="https://medium.com/@52pbailey/asynchronous-reactive-angular-components-b3ac494bf9cf" class="image"><img src="./images/Asynchronous, reactive component blog.PNG"></img></a>
 											<p>A medium article I wrote about Reactive programming in Angular using RXJS. In this article, I explain how to move away from using Imperative code by utilising the Reactive/Declarative coding paradigm.</p>
 											<ul class="actions">
 												<li><a href="https://medium.com/@52pbailey/asynchronous-reactive-angular-components-b3ac494bf9cf" class="button">More</a></li>
 											</ul>
+										</article>
+										<article>
+											<img class="image" src="./images/Coming_soon_banner.jpg"></img>
+											<h3>Reactive Pagination</h3>
+											<p>Currently in the process of writing a medium article about how I am implementing pagination in my new app using the Reactive programming paradigm. Watch this space...</p>
 										</article>
 									</div>
 								</section>
