adding new project

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 											</ul>
 										</article>
 										<article>
-											<img class="image" src="./images/Coming_soon_banner.jpg"></img>
+											<img class="image" src="./images/Coming_soon_banner.jpg" height="188px;"></img>
 											<h3>Reactive Pagination</h3>
 											<p>Currently in the process of writing a medium article about how I am implementing pagination in my new app using the Reactive programming paradigm. Watch this space...</p>
 										</article>
@@ -96,6 +96,14 @@
 										<h2>Projects</h2>
 									</header>
 									<div class="posts">
+										<article>
+											<a href="https://github.com/PNBailey/FileSharingApp" class="image"><img src="./images/File_sharing_app_gif.webm" height="245.39px;"></img></a>
+											<h3>File Sharing App</h3>
+											<p>Curently in development but this will be my pièce de résistance and will be the culmination of all the skills and experience I have gained so far. The app will allow users to upload files, create working groups with other users, like and share files etc. Really pleased with the progress made so far and the level of code coverage in my unit tests.</p>
+											<ul class="actions">
+												<li><a href="https://github.com/PNBailey/FileSharingApp" class="button">More</a></li>
+											</ul>
+										</article>
 										<article>
 											<a href="https://github.com/PNBailey/BeachClean" class="image"><img src="./images/Beach-Clean-Gif.gif" height="245.39px;"></img></a>
 											<h3>Beach Clean Events</h3>
