updating file path

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="https://github.com/PNBailey/FileSharingApp" class="image"><img src="./images/File_sharing_app_gif.webm" height="245.39px;"></img></a>
+											<a href="https://github.com/PNBailey/FileSharingApp" class="image"><img src="./images/File_sharing_app_gif.gif" height="245.39px;"></img></a>
 											<h3>File Sharing App</h3>
 											<p>Curently in development but this will be my pièce de résistance and will be the culmination of all the skills and experience I have gained so far. The app will allow users to upload files, create working groups with other users, like and share files etc. Really pleased with the progress made so far and the level of code coverage in my unit tests.</p>
 											<ul class="actions">
